@@ -2,6 +2,7 @@ TBA
 	* version v0_5_16
 	* bug fixes:
 	  - limit Lustre IOVs to PTL_MD_MAX_IOV (611336)
+	  - abstract ll_lookup2, fix ll_revalidate2 to use abstraction (256)
         * protocol change to lustre_msg: move |version| and add |flags|
         * added replay of create, unlink, link and rename operations during
           MDS failover; recovery should be much more robust now
